--- a/distribution/conf/application.properties
+++ b/distribution/conf/application.properties
@@ -15,15 +15,15 @@ server.port=8848
 
 #*************** Config Module Related Configurations ***************#
 ### If user MySQL as datasource:
-# spring.datasource.platform=mysql
+spring.datasource.platform=mysql
 
 ### Count of DB:
-# db.num=1
+db.num=1
 
 ### Connect URL of DB:
-# db.url.0=jdbc:mysql://1.1.1.1:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true
-# db.user=user
-# db.password=password
+db.url.0=jdbc:mysql://127.0.0.1:3306/nacos_devtest?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true
+db.user=user
+db.password=123456
 
 
 #*************** Naming Module Related Configurations ***************#
